# DynamicNotch

./: .gitignore  CLAUDE.md  INSTALL.md  MCP_SETUP.md  NEXT_STEPS.md  OPTIMIZATION_PLAN.md  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  STATISTICS_FEATURE.md  build-dmg-distribution.sh  build-dmg-signed.sh  build-dmg.sh  build-with-dev-cert.sh  clean-revoked-certs.sh  create-signing-cert.sh  fix-gatekeeper.sh  notch-hook  setup-keychain-isolation.sh
.bmad-core/: install-manifest.yaml
.claude/: settings-focused.json  settings.json  settings.local.backup.json  settings.local.json
.serena/: project.yml
DynamicNotch/: AirDrop+View.swift  AirDrop.swift  AppDelegate.swift  DynamicNotch-Bridging-Header.h  EventMonitors.swift  Ext+FileProvider.swift  Ext+NSAlert.swift  Ext+URL.swift  InfoPlist.xcstrings  Language.swift  Localizable.xcstrings  MediaInfoManager.swift  NotchContentView.swift  NotchHeaderView.swift  NotchMenuView.swift  NotchSettingsView.swift  NotchView.swift  NotchViewController.swift  NotchViewModel+Events.swift  NotchViewModel.swift  NotchWindow.swift  NotchWindowController.swift  PublishedPersist.swift  TrayDrop+DropItemView.swift  TrayDrop+View.swift  main.swift
DynamicNotch.xcodeproj/: project.pbxproj
NotchDrop/: DiffView.swift  InfoPlist.xcstrings  Language.swift  Localizable.xcstrings  NotchContentView.swift  NotchDrop.entitlements  NotchHeaderView.swift  NotchMenuView.swift  NotchSettingsView.swift  NotchView.swift  (+8 more)
NotchDrop.xcodeproj/: project.pbxproj  project.pbxproj.backup
rust-hook/: Cargo.toml
rust-hook/src/: main.rs
(+108 files in other folders)
